change to pubDate

--- a/src/content/blog/building-apptrack.mdx
+++ b/src/content/blog/building-apptrack.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building AppTrack"
 description: "I built AppTrack with friends to help interns and new grads find job postings. It sends daily emails to those who sign up with direct links to applications."
-date: "08-07-2022"
+pubDate: "08-07-2022"
 ---
 
 import { Image } from "astro:assets";
