--- a/src/content/blog/building-ascii-helper.mdx
+++ b/src/content/blog/building-ascii-helper.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building ASCII Helper"
 description: "Ever had to lookup an ASCII value by hand? This simple project makes that process much easier and is filled with DOM fundamentals."
-date: "10-24-2021"
+pubDate: "10-24-2021"
 ---
 
 import { Image } from "astro:assets";
