--- a/src/content/blog/building-computers.mdx
+++ b/src/content/blog/building-computers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Why and How I Taught Myself To Build Computers"
 description: "I taught myself how to build a computer from scratch in 8th grade. How did I do it?"
-date: "01/01/2022"
+pubDate: "01/01/2022"
 ---
 
 import { Image } from "astro:assets";
