--- a/src/content/blog/building-lone-music.mdx
+++ b/src/content/blog/building-lone-music.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Building Lone Music"
 description: "I built this semester-long project for my web programming class at UMass. Lone Music is a social media platform mixing elements of Reddit and Soundcloud."
-date: "08-05-2022"
+pubDate: "08-05-2022"
 ---
 
 import { Image } from "astro:assets";
