--- a/src/content/blog/first-personal-site.mdx
+++ b/src/content/blog/first-personal-site.mdx
@@ -1,7 +1,7 @@
 ---
 title: "My First Ever Personal Website"
 description: "This was a great way to practice my CSS skills and dive into using a static site generator for the first time."
-date: "12-30-2021"
+pubDate: "12-30-2021"
 ---
 
 import { Image } from "astro:assets";
