--- a/src/content/blog/trips-to-aruba.mdx
+++ b/src/content/blog/trips-to-aruba.mdx
@@ -1,7 +1,7 @@
 ---
 title: "My Trips to Aruba"
 description: "I've been on vacation twice to Aruba, and I can easily say it's been my favorite travel destination. This post highlights some of the best things to do."
-date: "08-12-2022"
+pubDate: "08-12-2022"
 ---
 
 import { Image } from "astro:assets";
