--- a/src/content/blog/async-javascript.mdx
+++ b/src/content/blog/async-javascript.mdx
@@ -1,7 +1,7 @@
 ---
 title: "A Brief Overview of Asynchronous JavaScript"
 description: "In this post, I explain the basics of asynchronous JavaScript. This guide is meant for absolute beginners but also serves as a good refresher for any developer."
-date: "08-09-2022"
+pubDate: "08-09-2022"
 ---
 
 import { Image } from "astro:assets";
