--- a/src/content/blog/async-javascript/index.mdx
+++ b/src/content/blog/async-javascript/index.mdx
@@ -5,7 +5,7 @@ pubDate: "08-09-2022"
 ---
 
 import { Image } from "astro:assets";
-import EventLoop from "../images/intro-to-async-js/event-loop.png";
+import EventLoop from "./event-loop.png";
 
 Asynchronous code is one of the many tricky parts of JavaScript. In this post, I explain what it is, how to work with it, and briefly how it all works under the hood. This guide is meant for absolute beginners but also serves as a good refresher for any developer. By the end of this article, you will have a high-level overview of everything you need to get started.
 
