--- a/src/content/blog/building-apptrack/index.mdx
+++ b/src/content/blog/building-apptrack/index.mdx
@@ -5,8 +5,8 @@ pubDate: "08-07-2022"
 ---
 
 import { Image } from "astro:assets";
-import Diagram from "../images/app-track/diagram.png";
-import Unsubscribe from "../images/app-track/unsub.png";
+import Diagram from "./diagram.png";
+import Unsubscribe from "./unsub.png";
 
 [GitHub Repository](https://github.com/jackbisceglia/apptrack)
 
