--- a/src/content/blog/building-ascii-helper/index.mdx
+++ b/src/content/blog/building-ascii-helper/index.mdx
@@ -5,7 +5,7 @@ pubDate: "10-24-2021"
 ---
 
 import { Image } from "astro:assets";
-import OriginalDesign from "../images/ascii-helper/ascii-design.png";
+import OriginalDesign from "./ascii-design.png";
 
 [GitHub Repository](https://github.com/joepetrillo/ascii-helper)
 
