--- a/src/content/blog/building-computers/index.mdx
+++ b/src/content/blog/building-computers/index.mdx
@@ -5,8 +5,8 @@ pubDate: "01/01/2022"
 ---
 
 import { Image } from "astro:assets";
-import OldBuild from "../images/building-my-pc/old-build.png";
-import BuildToday from "../images/building-my-pc/new-build.png";
+import OldBuild from "./old-build.png";
+import BuildToday from "./new-build.png";
 
 My computer science journey began in 2014 when I decided to build my own computer. I had no idea the difficulty or how much money it would cost compared to a Playstation or Xbox, but I was determined to learn.
 
