--- a/src/content/blog/building-lone-music/index.mdx
+++ b/src/content/blog/building-lone-music/index.mdx
@@ -5,10 +5,10 @@ pubDate: "08-05-2022"
 ---
 
 import { Image } from "astro:assets";
-import FeedPost from "../images/lone-music/feed-post.png";
-import LoginProfile from "../images/lone-music/login-profile.png";
-import FeedPage from "../images/lone-music/feed.png";
-import NewPostPage from "../images/lone-music/new-post.png";
+import FeedPost from "./feed-post.png";
+import LoginProfile from "./login-profile.png";
+import FeedPage from "./feed.png";
+import NewPostPage from "./new-post.png";
 
 [GitHub Repository](https://github.com/joepetrillo/cs326-final-bullymaguire)
 
