--- a/src/content/blog/first-personal-site/index.mdx
+++ b/src/content/blog/first-personal-site/index.mdx
@@ -5,8 +5,8 @@ pubDate: "12-30-2021"
 ---
 
 import { Image } from "astro:assets";
-import Desktop from "../images/first-personal-website/Desktop.png";
-import Mobile from "../images/first-personal-website/Mobile.png";
+import Desktop from "./Desktop.png";
+import Mobile from "./Mobile.png";
 
 [Live Website](https://old-site--jpetrillo.netlify.app) | [GitHub Repository](https://github.com/joepetrillo/eleventy-personal-site/tree/old-site)
 
