--- a/src/content/blog/trips-to-aruba/index.mdx
+++ b/src/content/blog/trips-to-aruba/index.mdx
@@ -5,13 +5,13 @@ pubDate: "08-12-2022"
 ---
 
 import { Image } from "astro:assets";
-import JollyPirate from "../images/trips-to-aruba/jolly-pirate.png";
-import Horses from "../images/trips-to-aruba/horses.jpg";
-import Sunset from "../images/trips-to-aruba/sunset.png";
-import ATVs from "../images/trips-to-aruba/atvs.jpeg";
-import Cliff from "../images/trips-to-aruba/cliff.png";
-import Cart from "../images/trips-to-aruba/cart.png";
-import Goats from "../images/trips-to-aruba/goats.png";
+import JollyPirate from "./jolly-pirate.png";
+import Horses from "./horses.jpg";
+import Sunset from "./sunset.png";
+import ATVs from "./atvs.jpeg";
+import Cliff from "./cliff.png";
+import Cart from "./cart.png";
+import Goats from "./goats.png";
 
 Aruba is a small island off Venezuela's coast in the southern Caribbean that is only 21 miles long. It is a very popular tropical vacation spot known for being safe, adventurous, and relaxing. I went to Aruba with family in 2019 and 2021 and would absolutely recommend it to anyone planning a trip. The beaches, activities, restauraunts, and overall atmosphere makes it hard to beat.
 
